# rust_cgi

./: .gitignore  Cargo.toml  \  build.sh  install.sh  rust_cgi.service
.github/workflows/: rust.yml  rust_release.yml
cgi/: _ext_.rb  _init_.rb  env  index  tcp_handle
cgi/static/: index
cgi/static/html/: test.html
cgi/static/js/: baseFunc.js  common.js
cgi/test/: index  page.html
src/: http_func.rs  lib.rs  main.rs  main.rs.back  tcp_class.rs  utils.rs
src/cgi/: _base.js  _base.rb  _base_.js  _base_.rb  _init_.rb  _upload  dstat  env  index  info  log  notify  static  tcp_handle  udp_handle
src/cgi/blog/: page.html
src/cgi/file/: download  download_page.html  home_page.html  info  list  upload  upload.js  upload_page.html
src/cgi/home/: index.js  page.html
src/cgi/index/: index.js  index.rb  index.rb.bck  page.html
src/cgi/js/: baseFunc.js  index  index.rb  xlsx.js  xterm.js
src/cgi/klipper/: index
src/cgi/misc/: notify  switch
src/cgi/room/: index  page.html  room.rb  share.js
src/cgi/share/: share.js
src/cgi/shell/: index  index.back  package-lock.json  package.json  page.html  xtermconfig
src/cgi/static/: index
src/cgi/static/js/: common.js
src/cgi/test/: fs  page.html  perl  ruby  test  zsh
src/tcp_class/: http_func.rs  http_func_back.rs  http_websocket_func.rs  mod.rs  tcp_base.back.rs  tcp_base.rs  tcp_file_func.rs  tcp_func.rs  websocket_func.rs
src/udp_class/: echo_func.rs  mod.rs  udp_base.rs  utun_func.rs
src/www/cgi/: _clipNotify  _dstat.html  _share.html  example  file
src/www/js/: baseFunc.js  ws.js
