[package]
name = "rust_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.6"
base64 = "0.13.0"
clap = "2.33.2"
lazy_static="1.2.0"
log = "0.4.14"
env_logger = "0.8.3"
# nix = "0.20.0"
libc = "0.2.94"